2008-01-09  Andreas Nilsson  <nisses.mail@home.se>

	* foundation.gnome.org/img/logos/Makefile.am: changed redhat.gif to
	redhat.png
	* foundation.gnome.org/index.wml: fixed redhat.gif to redhat.png

2008-01-08  Andreas Nilsson  <nisses.mail@home.se>

	* foundation.gnome.org/img/logos/imendio.png: fixed logo
	* foundation.gnome.org/img/logos/redhat.png: fixed logo

2008-01-03  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/about/index.wml: fix dates, remove old
	commented stuff
	* foundation.gnome.org/contact/index.wml: remove executive director
	address

2008-01-03  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/about/index.wml: new board
	* foundation.gnome.org/about/history/index.wml: add previous board
	here

2008-01-03  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/contact/index.wml: update snail mail address

2007-11-15  Behdad Esfahbod  <behdad@gnome.org>

	* foundation.gnome.org/index.wml: Clarify Free Software vs
	Open Source wording.

2007-08-13  Lucas Rocha  <lucasr@gnome.org>

	* foundation.gnome.org/about/index.wml: fixed a typo.

2007-08-10  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/about/index.wml: s/Dave/Lucas/

2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news about Igalia joining
	the Advisory Board
	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/img/logos/Makefile.am:
	* foundation.gnome.org/img/logos/igalia.png: add Igalia logo
	* foundation.gnome.org/about/index.wml: add Igalia to the list of AB
	members

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/membership/application.wml: show contacts in
	the mail even if it's only a renewal; we want to have summary AND
	details, not summary and optionally details

2007-04-19  Glynn Foster  <glynn.foster@sun.com>

	* foundation.gnome.org/index.wml: Add news item for Canonical joining
	the Advisory board.

2007-04-02  Vincent Untz  <vuntz@gnome.org>