@@ -79,6 +79,7 @@
       <li>Igalia</li>
       <li>Imendio</li>
       <li>Intel</li>
+      <li>Mozilla Foundation</li>
       <li>Nokia</li>
       <li>Novell</li>
       <li>OLPC</li>
