@@ -115,17 +115,18 @@
       <a href="http://www.debian.org/"><img src="img/logos/debian.gif" alt="Debian" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.fsf.org/"><img src="img/logos/fsf.png" alt="Free Software Foundation" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.hp.com/"><img src="img/logos/hp.gif" alt="Hewlett Packard" border="0" hspace="8" vspace="5" align="middle" /></a>
-      <a href="http://www.ibm.com/"><img src="img/logos/ibm.gif" alt="IBM" border="0" hspace="8" vspace="5" align="middle" /></a>
+      <a href="http://www.ibm.com/"><img src="img/logos/ibm.png" alt="IBM" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.igalia.com/"><img src="img/logos/igalia.png" alt="Igalia" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.imendio.com/"><img src="img/logos/imendio.png" alt="Imendio" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.intel.com/"><img src="img/logos/intel.png" alt="Intel" border="0" hspace="8" vspace="5" align="middle" /></a>
+      <a href="http://www.mozilla.org/"><img src="img/logos/mozilla-foundation.png" alt="Mozilla Foundation" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.nokia.com/"><img src="img/logos/nokia.gif" alt="Nokia"  border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.novell.com/"><img src="img/logos/novell.gif" alt="Novell Inc."  border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.laptop.org/"><img src="img/logos/olpc.gif" alt="OLPC" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.o-hand.com/"><img src="img/logos/openedhand.png" alt="OpenedHand" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.redhat.com/"><img src="img/logos/redhat.png" alt="Red Hat" border="0" hspace="8" vspace="5" align="middle" /></a>
       <a href="http://www.softwarefreedom.org/"><img src="img/logos/sflc.gif" alt="Software Freedom Law Center" border="0" hspace="8" vspace="5" align="middle" /></a>
-      <a href="http://www.sun.com/"><img src="img/logos/sun.gif" alt="Sun Microsystems" border="0" hspace="8" vspace="5" align="middle" /></a>
+      <a href="http://www.sun.com/"><img src="img/logos/sun.png" alt="Sun Microsystems" border="0" hspace="8" vspace="5" align="middle" /></a>
       <p>
         Pro bono legal services provided by <a href="http://www.wsgr.com/">Wilson Sonsini Goodrich &amp; Rosati</a> and the <a href="http://www.softwarefreedom.org/">Software Freedom Law Center</a>.
       </p>
